--- a/ext2.vcxproj.filters
+++ b/ext2.vcxproj.filters
@@ -22,5 +22,10 @@
     <Inf Include="ext2.inf">
       <Filter>Driver Files</Filter>
     </Inf>
-  </ItemGroup>  
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="ext2.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
